--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -15,10 +15,8 @@
   </head>
 
   <body>
-    <div id="container" class="container">
-      <!-- FORM SECTION -->
+    <div id="login-container" class="login-container">->
       <div class="row">
-        <!-- SIGN UP -->
         <div class="col align-items-center flex-col sign-up">
           <div class="form-wrapper align-items-center">
             <div class="form sign-up">
@@ -46,8 +44,7 @@
             </div>
           </div>
         </div>
-        <!-- END SIGN UP -->
-        <!-- SIGN IN -->
+
         <div class="col align-items-center flex-col sign-in">
           <div class="form-wrapper align-items-center">
             <div class="form sign-in">
@@ -71,29 +68,27 @@
           </div>
           <div class="form-wrapper"></div>
         </div>
-        <!-- END SIGN IN -->
+  
       </div>
-      <!-- END FORM SECTION -->
-      <!-- CONTENT SECTION -->
+
       <div class="row content-row">
-        <!-- SIGN IN CONTENT -->
+
         <div class="col align-items-center flex-col">
           <div class="text sign-in">
             <h2>Welcome</h2>
           </div>
           <div class="img sign-in"></div>
         </div>
-        <!-- END SIGN IN CONTENT -->
-        <!-- SIGN UP CONTENT -->
+
         <div class="col align-items-center flex-col">
           <div class="img sign-up"></div>
           <div class="text sign-up">
             <h2>Join with us</h2>
           </div>
         </div>
-        <!-- END SIGN UP CONTENT -->
+
       </div>
-      <!-- END CONTENT SECTION -->
+
     </div>
 
     <script src="./scrips/login.js"></script>
