--- a/src/main/resources/static/aboutUs.html
+++ b/src/main/resources/static/aboutUs.html
@@ -21,9 +21,14 @@
                         <a class="underline-hover-effect ms-3 me-3" href="./merchandise.html">Merchandise</a>
                         <a class="underline-hover-effect ms-3 me-3" href="./aboutUs.html">About us</a>
                     </div>
-                    <div>
-                        <a href="./login.html" id="btn-login">Login</a>
+                    <div v-if="isLogin === 'false'">
+                        <a  href="./login.html" id="btn-login">Login</a>
                     </div>
+                    <div v-else class="student-header-container me-4">
+                        <img src="./assets/harvey.png" alt="student" >
+                        <p>{{firstName}}  {{lastName}}</p>
+                    </div>
+                    
                 </nav>
                 <div class="header-container-title">
                     <h1 class="header-title">Who <span class="font">we </span> are ?</h1>
@@ -177,16 +182,14 @@
 
         <!----------------------------- SCRIPTS ----------------------------->
         <!--Chatbot Test-->
-        <script src="https://web.chatrace.com/webchat/plugin.js"></script>
-        <script>ktt10.setup({  pageId: 107945601966944, color: "#ce0202" });</script>
         <script 
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
-            crossorigin="anonymous">
-        </script>
-        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <script src="https://unpkg.com/vue@3"></script>
-        <script src="./scrips/main.js"></script>
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
+        crossorigin="anonymous">
+      </script>
+      <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+      <script src="https://unpkg.com/vue@3"></script>
+        <script src="./scrips/aboutUs.js"></script>
     </body>
 </html>
