agregue datos en intelliJ

--- a/src/main/resources/static/courses.html
+++ b/src/main/resources/static/courses.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-         <div id="app">
+        <div id="app">
           <header class="header bg-courses">
             <nav class="nav">
               <a href="./index.html"><img src="./assets/logo-nav.png" alt="logo" id="logo" class="logo-header"></a>
@@ -116,128 +116,24 @@
       </div>
 
         <div class="courses-cards">
-        <div class="col-md-10">
-          <div class="card-group"> 
-        <div class="courseCard">
-          <img src="./assets/new-fire.png" class="new-fire" id="fire">
-          <img class="courses_img" src="./assets/guitar.png" alt="">
-          <div class="content_courseCard">
-            <h2 class="bold">Guitar</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-              odio. Quisque volutpat mattis eros. Nullam malesuada erat ut
-              turpis. Suspendisse urna nibh, viverra non, semper suscipit,
-              posuere a, pede.
-            </p>
-            <p class="price">$18.400</p>
-            <figure>
-              <img src="./assets/btn_buy_course-06-06.png">
-              <figcaption>ADD TO THE CART
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ce0202" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                  <circle cx="6" cy="19" r="2" />
-                  <circle cx="17" cy="19" r="2" />
-                  <path d="M17 17h-11v-14h-2" />
-                  <path d="M6 5l6.005 .429m7.138 6.573l-.143 .998h-13" />
-                  <path d="M15 6h6m-3 -3v6" />
-                </svg>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-        <div class="courseCard">
-          <img class="courses_img" src="./assets/bass.png" alt="">
-          <div class="content_courseCard">
-            <h2 class="bold">Bass</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-              odio. Quisque volutpat mattis eros. Nullam malesuada erat ut
-              turpis. Suspendisse urna nibh, viverra non, semper suscipit,
-              posuere a, pede.
-            </p>
-            <p class="price">$11.200 </p>
-            <figure>
-              <img src="./assets/btn_buy_course-06-06.png">
-              <figcaption>ADD TO THE CART
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ce0202" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                  <circle cx="6" cy="19" r="2" />
-                  <circle cx="17" cy="19" r="2" />
-                  <path d="M17 17h-11v-14h-2" />
-                  <path d="M6 5l6.005 .429m7.138 6.573l-.143 .998h-13" />
-                  <path d="M15 6h6m-3 -3v6" />
-                </svg>
-              </figcaption>
-            </figure>
-          </div>
-        </div>    
-        <div class="courseCard">
-          <img class="courses_img" src="./assets/drums.png" alt="">
-          <div class="content_courseCard">
-            <h2 class="bold">Drums</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-              odio. Quisque volutpat mattis eros. Nullam malesuada erat ut
-              turpis. Suspendisse urna nibh, viverra non, semper suscipit,
-              posuere a, pede.
-            </p>
-            <p class="price">$20.300</p>
-            <figure>
-              <img src="./assets/btn_buy_course-06-06.png">
-              <figcaption>ADD TO THE CART
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ce0202" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                  <circle cx="6" cy="19" r="2" />
-                  <circle cx="17" cy="19" r="2" />
-                  <path d="M17 17h-11v-14h-2" />
-                  <path d="M6 5l6.005 .429m7.138 6.573l-.143 .998h-13" />
-                  <path d="M15 6h6m-3 -3v6" />
-                </svg>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-        </div>
-
-        <div class="card-group">
-          <div class="courseCard">
-            <img class="courses_img" src="./assets/piano.png" alt="">
-            <div class="content_courseCard">
-              <h2 class="bold">Piano</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-                odio. Quisque volutpat mattis eros. Nullam malesuada erat ut
-                turpis. Suspendisse urna nibh, viverra non, semper suscipit,
-                posuere a, pede.
-              </p>
-              <p class="price">$10.000</p>
-              <figure>
-                <img src="./assets/btn_buy_course-06-06.png">
-                <figcaption>ADD TO THE CART
-                  <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ce0202" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <circle cx="6" cy="19" r="2" />
-                    <circle cx="17" cy="19" r="2" />
-                    <path d="M17 17h-11v-14h-2" />
-                    <path d="M6 5l6.005 .429m7.138 6.573l-.143 .998h-13" />
-                    <path d="M15 6h6m-3 -3v6" />
-                  </svg>
-                </figcaption>
-              </figure>
-            </div>
-          </div>
-          <div class="courseCard">
+          <!--Courses Card-->
+          <div v-for="course in courses" class="courseCard">
             <img src="./assets/new-fire.png" class="new-fire" id="fire">
-            <img class="courses_img" src="./assets/sing.png" alt="">
+            <img v-if="course.name === 'Guitar'" class="courses_img" src="./assets/guitar.png" alt="">
+            <img v-if="course.name === 'Drums'" class="courses_img" src="./assets/drums.png" alt="">
+            <img v-if="course.name === 'Sax'" class="courses_img" src="./assets/sax.png" alt="">
+            <img v-if="course.name === 'Sing'" class="courses_img" src="./assets/sing.png" alt="">
+            <img v-if="course.name === 'Bass'" class="courses_img" src="./assets/bass.png" alt="">
+            <img v-if="course.name === 'Piano'" class="courses_img" src="./assets/piano.png" alt="">
             <div class="content_courseCard">
-              <h2 class="bold">Sing</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-                odio. Quisque volutpat mattis eros. Nullam malesuada erat ut
-                turpis. Suspendisse urna nibh, viverra non, semper suscipit,
-                posuere a, pede.
-              </p>
-              <p class="price">$12.200</p>
+              <h2 class="bold">{{course.name}}</h2>
+              <ul class="p-0">
+                <li>Duration: {{course.duration}} hs.</li>
+                <li>Lessons: {{course.lessons}}</li>
+                <li>Level: {{course.level}}</li>
+                <li>Teacher: {{course.teacher.firstName}} {{course.teacher.lastName}}</li>
+              </ul>
+              <p class="price">${{course.price}}</p>
               <figure>
                 <img src="./assets/btn_buy_course-06-06.png">
                 <figcaption>ADD TO THE CART
@@ -253,38 +149,11 @@
               </figure>
             </div>
           </div>
-          <div class="courseCard">
-            <img class="courses_img" src="./assets/sax.png" alt="">
-            <div class="content_courseCard">
-              <h2 class="bold">Sax</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-                odio. Quisque volutpat mattis eros. Nullam malesuada erat ut
-                turpis. Suspendisse urna nibh, viverra non, semper suscipit,
-                posuere a, pede.
-              </p>
-              <p class="price">$15.700</p>
-              <figure>
-                <img src="./assets/btn_buy_course-06-06.png">
-                <figcaption>ADD TO THE CART
-                  <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ce0202" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <circle cx="6" cy="19" r="2" />
-                    <circle cx="17" cy="19" r="2" />
-                    <path d="M17 17h-11v-14h-2" />
-                    <path d="M6 5l6.005 .429m7.138 6.573l-.143 .998h-13" />
-                    <path d="M15 6h6m-3 -3v6" />
-                  </svg>
-                </figcaption>
-              </figure>
-            </div>
-          </div>
-        </div>
-        </div>
-      
-      </div>
+        
 
-    </div>
+
+        </div>
+        </div>
 
   </main>
 
