cambio de nombre profe

--- a/src/main/resources/static/courses.html
+++ b/src/main/resources/static/courses.html
@@ -110,7 +110,7 @@
             </li>
             <li class="filters-li">
               <img alt="Level 1" src="/assets/skill-level-4.svg" class="level-img">  
-              Freddy Cornetti
+              Federico Rouyere
             </li>
           </ul>
       </div>
