--- a/src/main/resources/static/students.html
+++ b/src/main/resources/static/students.html
@@ -24,15 +24,22 @@
                     <nav class="nav">
                          <a href="./index.html"><img src="./assets/logo-nav.png" alt="logo" id="logo" class="logo-header"></a>
                          <div>
-                              <a class="underline-hover-effect ms-3 me-3" href="./index.html">Home</a>
-                              <a class="underline-hover-effect ms-3 me-3" href="./courses.html">Courses</a>
-                              <a class="underline-hover-effect ms-3 me-3" href="./merchandise.html">Merchandise</a>
-                              <a class="underline-hover-effect ms-3 me-3" href="./aboutUs.html">About us</a>
+                             <a class="underline-hover-effect ms-3 me-3" href="./index.html">Home</a>
+                             <a class="underline-hover-effect ms-3 me-3" href="./courses.html">Courses</a>
+                             <a class="underline-hover-effect ms-3 me-3" href="./merchandise.html">Merchandise</a>
+                             <a class="underline-hover-effect ms-3 me-3" href="./aboutUs.html">About us</a>
                          </div>
-                         <div>
-                              <a href="./login.html" id="btn-login">Login</a>
+                         <div v-if="!isLogin">
+                             <a  href="./login.html" id="btn-login">Login</a>
                          </div>
-                    </nav>
+                         <div v-else class="student-header-container">
+                             <p>{{firstName}}  {{lastName}}</p>
+                             <img src="./assets/harvey.png" alt="student" >
+                             <ul>
+                                 <li class="d-flex justify-content-between align-items-center"><i class="fa-solid fa-right-from-bracket me-2"></i><p>Logout</p></li>
+                             </ul>
+                         </div>
+                     </nav>
                     <div class="header-container-title">
                          <h1 class="header-title">Your personal <span class="font">Dashboard </span></h1>
                          <h2 class="header-title">Fusce plentesque suscipit</h2>
