--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,16 +16,24 @@
         <div id="app">
             <header class="header bg-hero">
                 <nav class="nav">
-                    <img src="./assets/logo-nav.png" alt="logo" id="logo">
+                    <a href="./index.html"><img src="./assets/logo-nav.png" alt="logo" id="logo" class="logo-header"></a>
                     <div>
-                        <a class="underline-hover-effect ms-3 me-3" href="#">Home</a>
+                        <a class="underline-hover-effect ms-3 me-3" href="./index.html">Home</a>
                         <a class="underline-hover-effect ms-3 me-3" href="./courses.html">Courses</a>
                         <a class="underline-hover-effect ms-3 me-3" href="./merchandise.html">Merchandise</a>
                         <a class="underline-hover-effect ms-3 me-3" href="./aboutUs.html">About us</a>
                     </div>
-                    <div>
-                        <a href="./login.html" id="btn-login">Login</a>
+                    <div v-if="!isLogin">
+                        <a  href="./login.html" id="btn-login">Login</a>
                     </div>
+                    <div v-else class="student-header-container">
+                        <p>{{firstName}}  {{lastName}}</p>
+                        <img src="./assets/harvey.png" alt="student" >
+                        <ul>
+                            <li class="d-flex justify-content-between align-items-center"><i class="fa-solid fa-right-from-bracket me-2"></i><p>Logout</p></li>
+                        </ul>
+                    </div>
+                    
                 </nav>
                 <div class="header-container-title">
                     <h1 class="header-title">Welcome to <span class="font-red">e</span>music</h1>
