--- a/src/main/resources/static/merchandise.html
+++ b/src/main/resources/static/merchandise.html
@@ -23,14 +23,20 @@
             <div v-if="!isLogin">
                 <a  href="./login.html" id="btn-login">Login</a>
             </div>
-            <div v-else class="student-header-container">
-                <p>{{firstName}}  {{lastName}}</p>
-                <img src="./assets/harvey.png" alt="student" >
-                <ul>
-                    <li class="d-flex justify-content-between align-items-center"><i class="fa-solid fa-right-from-bracket me-2"></i><p>Logout</p></li>
-                </ul>
+            <div v-else class="student-cart-container">
+                <!------------------- Shop Car--------------------->
+                <div class="cart">
+                    <div class="cart-amount">0</div>
+                    <img src="/assets/cart-01.png">
+                </div>
+                <div class="student-header-container">
+                    <p>{{firstName}}  {{lastName}}</p>
+                    <img src="./assets/harvey.png" alt="student" >
+                    <ul>
+                        <li class="d-flex justify-content-between align-items-center"><i class="fa-solid fa-right-from-bracket me-2"></i><p>Logout</p></li>
+                    </ul>
+                </div>
             </div>
-            
         </nav>
             <div class="header-container-title">
                 <h1 class="header-title">Choose your course <span class="font">Now </span></h1>
