--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,7 +30,7 @@
                         <a  href="./login.html" id="btn-login">Login</a>
                     </div>
                     <div v-else class="student-cart-container">
-                        <!------------------- Shop Car--------------------->
+                        <!------------------- Shop Car --------------------->
                         <div class="cart">
                             <div class="cart-amount">0</div>
                             <img src="/assets/cart-01.png">
